--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "google-auth-library": "^6.1.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.3.3",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "sweetalert2": "^10.10.1"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
