--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": "postgres",
+    "password": "postgre",
     "database": "fancy_todo",
     "host": "localhost",
     "dialect": "postgres"
